--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,23 +82,8 @@ if(UNIX AND NOT APPLE)
     # Linux-specific configuration here
     
     # Find the SDL libraries regardless of their exact filenames
-    file(GLOB SDL3_LIB "${CMAKE_SOURCE_DIR}/lib/libSDL3.so*")
-    file(GLOB SDL3_IMAGE_LIB "${CMAKE_SOURCE_DIR}/lib/libSDL3_image.so*")
-    
-    # If .so files are not found, try other library suffixes (some Linux distros might use different suffixes)
-    if(NOT SDL3_LIB)
-        file(GLOB SDL3_LIB "${CMAKE_SOURCE_DIR}/lib/libSDL3*.so*")
-        if(NOT SDL3_LIB)
-            message(WARNING "Could not find libSDL3 in ${CMAKE_SOURCE_DIR}/lib/")
-        endif()
-    endif()
-    
-    if(NOT SDL3_IMAGE_LIB)
-        file(GLOB SDL3_IMAGE_LIB "${CMAKE_SOURCE_DIR}/lib/libSDL3_image*.so*")
-        if(NOT SDL3_IMAGE_LIB)
-            message(WARNING "Could not find libSDL3_image in ${CMAKE_SOURCE_DIR}/lib/")
-        endif()
-    endif()
+    file(GLOB SDL3_LIBS "${CMAKE_SOURCE_DIR}/lib/libSDL3.so*")
+    file(GLOB SDL3_IMAGE_LIBS "${CMAKE_SOURCE_DIR}/lib/libSDL3_image.so*")
     
     # Custom target for creating Linux package
     add_custom_target(linux-package
@@ -107,27 +92,16 @@ if(UNIX AND NOT APPLE)
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:gs2> ${CMAKE_BINARY_DIR}/packages/linux-cli/
         COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/packages/linux-cli/resources/img
         COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/assets/img/atlas.png ${CMAKE_BINARY_DIR}/packages/linux-cli/resources/img/atlas.png
-        # Copy SDL dynamic libraries
+        # Copy SDL dynamic libraries with correct names
         COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/packages/linux-cli/lib
-        COMMAND bash -c "if [ ! -z \"${SDL3_LIB}\" ]; then ${CMAKE_COMMAND} -E copy_if_different ${SDL3_LIB} ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/; fi"
-        COMMAND bash -c "if [ ! -z \"${SDL3_IMAGE_LIB}\" ]; then ${CMAKE_COMMAND} -E copy_if_different ${SDL3_IMAGE_LIB} ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/; fi"
-        # Create symlinks if necessary for libraries - using shell to check if files exist first
-        COMMAND bash -c "if [ -f ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3.so.0 ] && [ ! -f ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3.so ]; then ln -sf libSDL3.so.0 ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3.so; fi"
-        COMMAND bash -c "if [ -f ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so.0 ] && [ ! -f ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so ]; then ln -sf libSDL3_image.so.0 ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so; fi"
-        # Fix up runtime paths with patchelf or chrpath - Linux tools for changing RPATH
-        COMMAND bash -c "if command -v patchelf >/dev/null 2>&1; then \
-            patchelf --set-rpath '$$ORIGIN/lib' ${CMAKE_BINARY_DIR}/packages/linux-cli/gs2 && \
-            (if [ -f ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so ]; then \
-                patchelf --set-rpath '$$ORIGIN' ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so; \
-            fi) \
-        elif command -v chrpath >/dev/null 2>&1; then \
-            chrpath -r '$$ORIGIN/lib' ${CMAKE_BINARY_DIR}/packages/linux-cli/gs2 && \
-            (if [ -f ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so ]; then \
-                chrpath -r '$$ORIGIN' ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so; \
-            fi) \
-        else \
-            echo 'WARNING: Neither patchelf nor chrpath found. RPATH not set for Linux package.'; \
-        fi"
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/lib/libSDL3.so.0 ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/lib/libSDL3_image.so.0 ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/
+        # Create necessary symlinks
+        COMMAND ${CMAKE_COMMAND} -E create_symlink libSDL3.so.0 ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3.so
+        COMMAND ${CMAKE_COMMAND} -E create_symlink libSDL3_image.so.0 ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so
+        # Fix up runtime paths with chrpath
+        COMMAND chrpath -r '$$ORIGIN/lib' ${CMAKE_BINARY_DIR}/packages/linux-cli/gs2
+        COMMAND chrpath -r '$$ORIGIN' ${CMAKE_BINARY_DIR}/packages/linux-cli/lib/libSDL3_image.so.0
         DEPENDS gs2
     )
     # Custom target for development environment resources
