fix icons aspect ratio, transparency; allow multiple open instances of gs2; remove old test file

--- a/assets/Info.plist
+++ b/assets/Info.plist
@@ -20,5 +20,7 @@
     <string>10.15</string>
     <key>NSHighResolutionCapable</key>
     <true/>
+    <key>LSMultipleInstancesProhibited</key>
+    <false/>
 </dict>
 </plist> 
