--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,8 @@ add_library(gs2_devices_speaker     src/devices/speaker/speaker.cpp )
 
 add_library(gs2_devices_memexp     src/devices/memoryexpansion/memexp.cpp )
 
+add_library(gs2_devices_parallel     src/devices/parallel/parallel.cpp )
+
 add_library(gs2_cpu src/cpus/cpu_6502.cpp src/cpus/cpu_65c02.cpp )
 
 add_library(gs2_util src/util/media.cpp src/util/ResourceFile.cpp src/util/dialog.cpp src/util/mount.cpp src/util/reset.cpp )
@@ -271,6 +273,7 @@ target_link_libraries(gs2
     gs2_devices_speaker
     gs2_devices_game
     gs2_devices_memexp
+    gs2_devices_parallel
     gs2_devices_pdblock2
     gs2_util
     gs2_ui
