fix for windows build - link sdl to _ui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,6 +265,9 @@ include_directories(
     /usr/local/include
 )
 
+target_link_libraries(gs2_ui PRIVATE SDL3::SDL3-shared SDL3_image::SDL3_image-shared)
+
+
 # Link SDL3 and required frameworks
 target_link_libraries(gs2 PRIVATE 
     SDL3::SDL3-shared
