--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,6 +246,8 @@ add_library(gs2_devices_memexp     src/devices/memoryexpansion/memexp.cpp )
 
 add_library(gs2_devices_parallel     src/devices/parallel/parallel.cpp )
 
+add_library(gs2_devices_videx     src/devices/videx/videx.cpp src/devices/videx/videx_80x24.cpp )
+
 add_library(gs2_cpu src/cpus/cpu_6502.cpp src/cpus/cpu_65c02.cpp )
 
 add_library(gs2_util src/util/media.cpp src/util/ResourceFile.cpp src/util/dialog.cpp src/util/mount.cpp src/util/reset.cpp
@@ -300,12 +302,12 @@ target_link_libraries(gs2
     gs2_devices_keyboard 
     gs2_devices_diskii_fmt 
     gs2_devices_languagecard 
-    #gs2_devices_prodos_block
     gs2_devices_prodos_clock
     gs2_devices_speaker
     gs2_devices_game
     gs2_devices_memexp
     gs2_devices_parallel
+    gs2_devices_videx
     gs2_devices_pdblock2
     gs2_util
     gs2_ui
