first commit mockingboard support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,6 +248,8 @@ add_library(gs2_devices_parallel     src/devices/parallel/parallel.cpp )
 
 add_library(gs2_devices_videx     src/devices/videx/videx.cpp src/devices/videx/videx_80x24.cpp )
 
+add_library(gs2_devices_mockingboard     src/devices/mockingboard/mb.cpp )
+
 add_library(gs2_cpu src/cpus/cpu_6502.cpp src/cpus/cpu_65c02.cpp )
 
 add_library(gs2_util src/util/media.cpp src/util/ResourceFile.cpp src/util/dialog.cpp src/util/mount.cpp src/util/reset.cpp
@@ -309,6 +311,7 @@ target_link_libraries(gs2
     gs2_devices_parallel
     gs2_devices_videx
     gs2_devices_pdblock2
+    gs2_devices_mockingboard
     gs2_util
     gs2_ui
 )
