--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build-debug",
             "type": "shell",
-            "command": "cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && cmake --build .",
+            "command": "cmake -DCMAKE_BUILD_TYPE=Debug . && cmake --build .",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -13,7 +13,7 @@
         {
             "label": "build-release",
             "type": "shell",
-            "command": "cd build && cmake -DCMAKE_BUILD_TYPE=Release .. && cmake --build .",
+            "command": "cmake -DCMAKE_BUILD_TYPE=Release . && cmake --build .",
             "group": "build"
         }
     ]
